examples/smlfmt-1.2.0/test/fail/bad-let-in-end-1.sml
val _ =
  let
    val x = let val y = "hello" in () end
    val y = let let in (1, 2) end
  in
    10000.0
  end
